--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-glium = "*"
-glutin = "*"
-imgui = "*"
-imgui-sdl2 = "*"
-gl = "*"
-imgui-opengl-renderer = "*"
-sdl2 = "*"
+fixedstep = "0.3.0"
+notan = { version = "*", features = ["egui"] }
